examples/c/error-codes/violates-constraint/fatal/CV-TDG13-bad-static.output
CV-TDG13-bad-static.c:4:5: error: redefinition of 'x'
int x = 7;
    ^
CV-TDG13-bad-static.c:3:5: note: previous definition is here
int x = 5;
    ^
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
